Generate lib on postinstall.  Fix installing errors when installing from github and not npm.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "pretest": "coffeelint ./src",
     "test": "scripts/test",
     "prepublish": "scripts/prepublish"
+    "postinstall": "scripts/prepublish"
   },
   "repository": {
     "type": "git",
